# NDKSimper

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/youyi/ndksimple/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/youyi/ndksimple/: MainActivity.kt  Person.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/youyi/ndksimple/: ExampleUnitTest.kt
audio_simple/: build.gradle
audio_simple/src/main/: AndroidManifest.xml
audio_simple/src/main/cpp/: CMakeLists.txt
audio_simple/src/main/cpp/opensl/: AudioEngine.h  OpenSLAudioPlay.cpp  OpenSLAudioPlay.h  audio_play.cpp
audio_simple/src/main/java/com/youyi/audio/: AudioTest.kt  AudioTracker.kt  MainActivity.kt
audio_simple/src/main/res/layout/: activity_main.xml
audio_simple/src/main/res/values/: strings.xml  themes.xml
cmake_simple/: build.gradle
cmake_simple/src/androidTest/java/com/youyi/cmake_simple/: ExampleInstrumentedTest.kt
cmake_simple/src/main/: AndroidManifest.xml
cmake_simple/src/main/cpp/: CMakeLists.txt  Note.md  native-lib.cpp
cmake_simple/src/main/java/com/youyi/cmake_simple/: MainActivity.kt
cmake_simple/src/main/res/values/: strings.xml
cmake_simple/src/main/res/values-night/: themes.xml
cmake_simple/src/test/java/com/youyi/cmake_simple/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
lib_ffmpeg/: build.gradle
lib_ffmpeg/src/androidTest/java/com/youyi/ffmpeg/: ExampleInstrumentedTest.kt
lib_ffmpeg/src/main/: AndroidManifest.xml
lib_ffmpeg/src/main/cpp/: CMakeLists.txt  ffmpeg-lib.cpp
lib_ffmpeg/src/main/java/com/youyi/ffmpeg/: MainActivity.kt
lib_ffmpeg/src/main/jni/include/libavutil/: version.h
lib_ffmpeg/src/test/java/com/youyi/ffmpeg/: ExampleUnitTest.kt
video_player/: build.gradle
video_player/src/androidTest/java/com/youyi/player/: ExampleInstrumentedTest.kt
video_player/src/main/: AndroidManifest.xml
video_player/src/main/cpp/: CMakeLists.txt
video_player/src/main/cpp/player/: AudioChannel.cpp  JNICallback.cpp  JNICallback.h  MPlayer.cpp  MPlayer.h  VideoChannel.cpp  player.cpp
video_player/src/main/cpp/player/include/: AudioChannel.h  BaseChannel.h  JNICallback.h  MPlayer.h  VideoChannel.h
video_player/src/main/cpp/player/utils/: Constans.h  macro.h  safe_queue.h
video_player/src/main/cpp/pusher/: AudioChannel.cpp
video_player/src/main/cpp/pusher/include/: AudioChannel.h
video_player/src/main/java/com/youyi/player/: NativeLib.kt
video_player/src/test/java/com/youyi/player/: ExampleUnitTest.kt
video_simple/: build.gradle
video_simple/src/androidTest/java/com/youyi/video/: ExampleInstrumentedTest.kt
video_simple/src/main/: AndroidManifest.xml
video_simple/src/main/cpp/: CMakeLists.txt
video_simple/src/main/cpp/gles/: Gles_play.cpp  Gles_play.h  PlayCallback.cpp  PlayCallback.h  video.cpp  video.h
video_simple/src/main/java/com/youyi/video/: MainActivity.kt  NativeLib.kt  YUVPlay.kt
video_simple/src/main/res/layout/: activity_main.xml
video_simple/src/main/res/values/: strings.xml
video_simple/src/test/java/com/youyi/video/: ExampleUnitTest.kt
